simonask.werk.6ee8ea241a531f4f070ea0432eee18dd395d982f
Running as unit: run-p889796-i5083487.scope; invocation ID: 6137241bf8644858b8c25abfae6c5251
    Updating `tuna` index
 Downloading crates ...
  Downloaded line-span v0.1.5 (registry `tuna`)
  Downloaded stringleton-registry v0.2.1 (registry `tuna`)
  Downloaded stringleton v0.2.1 (registry `tuna`)
  Downloaded tzdb v0.7.3 (registry `tuna`)
  Downloaded notify-debouncer-full v0.6.0 (registry `tuna`)
  Downloaded tzdb_data v0.2.3 (registry `tuna`)
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling libc v0.2.178
    Checking cfg-if v1.0.4
   Compiling crossbeam-utils v0.8.21
    Checking pin-project-lite v0.2.16
    Checking bitflags v2.10.0
   Compiling serde_core v1.0.228
    Checking futures-core v0.3.31
   Compiling stable_deref_trait v1.2.1
   Compiling icu_normalizer_data v2.1.1
   Compiling icu_properties_data v2.1.2
    Checking parking v2.2.1
    Checking futures-io v0.3.31
    Checking fastrand v2.3.0
    Checking memchr v2.7.6
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
   Compiling rustix v1.1.2
    Checking smallvec v1.15.1
    Checking concurrent-queue v2.5.0
   Compiling pkg-config v0.3.32
   Compiling vcpkg v0.2.15
    Checking linux-raw-sys v0.11.0
    Checking slab v0.4.11
   Compiling syn v2.0.111
    Checking once_cell v1.21.3
   Compiling serde v1.0.228
    Checking event-listener v5.4.1
    Checking futures-lite v2.6.1
   Compiling litemap v0.8.1
   Compiling jobserver v0.1.34
   Compiling writeable v0.6.2
    Checking log v0.4.29
    Checking event-listener-strategy v0.5.4
   Compiling cc v1.2.49
    Checking equivalent v1.0.2
    Checking anstyle v1.0.13
    Checking allocator-api2 v0.2.21
   Compiling autocfg v1.5.0
    Checking foldhash v0.2.0
   Compiling getrandom v0.3.4
    Checking hashbrown v0.16.1
   Compiling async-io v2.6.0
    Checking aho-corasick v1.1.4
    Checking regex-syntax v0.8.8
    Checking async-task v4.7.1
   Compiling parking_lot_core v0.9.12
   Compiling version_check v0.9.5
   Compiling zerocopy v0.8.31
   Compiling linkme-impl v0.3.35
   Compiling ahash v0.8.12
   Compiling libz-sys v1.1.23
   Compiling libgit2-sys v0.18.3+1.9.2
    Checking async-channel v2.5.0
    Checking atomic-waker v1.1.2
   Compiling linkme v0.3.35
    Checking same-file v1.0.6
    Checking scopeguard v1.2.0
   Compiling unicode-xid v0.2.6
    Checking walkdir v2.5.0
   Compiling const_format_proc_macros v0.2.34
    Checking lock_api v0.4.14
    Checking piper v0.2.4
    Checking indexmap v2.12.1
    Checking async-lock v3.4.1
    Checking regex-automata v0.4.13
   Compiling thiserror v2.0.17
    Checking futures-sink v0.3.31
    Checking winnow v0.7.14
   Compiling utf8_iter v1.0.4
    Checking utf8parse v0.2.2
    Checking unicode-width v0.2.2
   Compiling percent-encoding v2.3.2
   Compiling form_urlencoded v1.2.2
    Checking annotate-snippets v0.12.10
    Checking anstyle-parse v0.2.7
    Checking futures-channel v0.3.31
    Checking parking_lot v0.12.5
    Checking blocking v1.6.2
    Checking signal-hook-registry v1.4.7
    Checking tracing-core v0.1.35
    Checking futures-task v0.3.31
    Checking polling v3.11.0
   Compiling powerfmt v0.2.0
    Checking pin-utils v0.1.0
   Compiling tz-rs v0.7.1
    Checking colorchoice v1.0.4
    Checking ctor v0.6.3
    Checking is_terminal_polyfill v1.70.2
    Checking anstyle-query v1.1.5
    Checking anstream v0.6.21
    Checking async-signal v0.2.13
   Compiling deranged v0.5.5
    Checking async-executor v1.13.3
    Checking bstr v1.12.1
   Compiling tzdb_data v0.2.3
    Checking crossbeam-epoch v0.9.18
   Compiling synstructure v0.13.2
   Compiling cfg_aliases v0.2.1
   Compiling itoa v1.0.15
   Compiling anyhow v1.0.100
   Compiling iana-time-zone v0.1.64
   Compiling num-conv v0.1.0
   Compiling num_threads v0.1.7
   Compiling time-core v0.1.6
    Checking toml_parser v1.0.4
   Compiling nix v0.30.1
    Checking globset v0.4.18
    Checking crossbeam-deque v0.8.6
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.228
   Compiling thiserror-impl v2.0.17
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.31
   Compiling time v0.3.44
   Compiling zerofrom v0.1.6
   Compiling yoke v0.8.1
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
    Checking futures-util v0.3.31
    Checking tracing v0.1.43
   Compiling tzdb v0.7.3
    Checking async-process v2.5.0
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling icu_collections v2.1.1
   Compiling icu_locale_core v2.1.1
    Checking regex v1.12.2
    Checking async-net v2.0.0
   Compiling icu_provider v2.1.1
    Checking async-fs v2.2.0
   Compiling const_format v0.2.35
    Checking icu_properties v2.1.2
   Compiling icu_normalizer v2.1.1
    Checking stringleton-registry v0.2.1
    Checking stringleton v0.2.1
    Checking werk-util v0.1.0 (/tmp/nix-shell.AaBijX/simonask_werk_0t9ucy8y/werk-util)
    Checking serde_spanned v1.0.3
    Checking toml_datetime v0.7.3
    Checking inotify-sys v0.1.5
    Checking toml_writer v1.0.4
    Checking clap_lex v0.7.6
   Compiling paste v1.0.15
   Compiling is_debug v1.1.0
    Checking env_home v0.1.0
   Compiling heck v0.5.0
    Checking lazy_static v1.5.0
    Checking strsim v0.11.1
   Compiling clap_derive v4.5.49
    Checking clap_builder v4.5.53
    Checking futures-executor v0.3.31
    Checking futures v0.3.31
    Checking sharded-slab v0.1.7
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.7
    Checking which v8.0.0
    Checking toml_edit v0.23.9
    Checking werk-parser v0.1.0 (/tmp/nix-shell.AaBijX/simonask_werk_0t9ucy8y/werk-parser)
    Checking inotify v0.11.0
    Checking werk-fs v0.1.0 (/tmp/nix-shell.AaBijX/simonask_werk_0t9ucy8y/werk-fs)
    Checking smol v2.0.2
    Checking ignore v0.4.25
    Checking matchers v0.2.0
    Checking tracing-log v0.2.0
    Checking mio v1.1.1
    Checking thread_local v1.1.9
    Checking rustc-stable-hash v0.1.2
    Checking notify-types v2.0.0
   Compiling serde_json v1.0.145
    Checking nu-ansi-term v0.50.3
   Compiling owo-colors v4.2.3
    Checking notify v8.2.0
    Checking clap v4.5.53
    Checking tracing-subscriber v0.3.22
    Checking tempfile v3.23.0
    Checking is-terminal v0.4.17
   Compiling macro_rules_attribute-proc_macro v0.2.2
    Checking file-id v0.2.3
    Checking is_executable v1.0.5
    Checking ryu v1.0.20
    Checking clap_complete v4.5.61
    Checking macro_rules_attribute v0.2.2
    Checking notify-debouncer-full v0.6.0
    Checking ctrlc v3.5.1
    Checking clio v0.3.5
    Checking smol-macros v0.1.1
    Checking num_cpus v1.17.0
    Checking line-span v0.1.5
    Checking werk-runner v0.1.0 (/tmp/nix-shell.AaBijX/simonask_werk_0t9ucy8y/werk-runner)
    Checking git2 v0.20.3
error[E0275]: overflow evaluating the requirement `{async block@werk-runner/runner.rs:956:32: 956:42}: std::marker::Send`
   --> werk-runner/runner.rs:956:26
    |
956 |                         .spawn(async move { this2.run_task(dep, DepChain::Owned(&parent)).await });
    |                          ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`werk_runner`)
note: required by a bound in `Executor::<'a>::spawn`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/async-executor-1.13.3/src/lib.rs:165:73
    |
165 |     pub fn spawn<T: Send + 'a>(&self, future: impl Future<Output = T> + Send + 'a) -> Task<T> {
    |                                                                         ^^^^ required by this bound in `Executor::<'a>::spawn`

For more information about this error, try `rustc --explain E0275`.
error: could not compile `werk-runner` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
